--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_sign_in: ^6.1.5
   firebase_storage: ^11.2.8
   cloud_firestore: ^4.11.0
+  cached_network_image: ^3.3.0
 
 
 
